# aws_hackathon

./: .env
python-server/: pyproject.toml
python-server/integration/: mimic_fhir_mcp_client.py
