[project]
name = "python-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aws-sdk-bedrock-runtime>=0.0.2",
    "boto3>=1.26.0",
    "mcp==1.8.1",
    "numpy==2.2.4",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "requests>=2.28.0",
    "requests-aws4auth>=0.9.0",
    "rx==3.2.0",
    "scipy==1.15.2",
    "seaborn>=0.13.2",
    "strands-agents>=0.1.7",
    "websockets==15.0.1",
]
